# nn-dataset

./: .gitignore  BUG_FIX_EXPLANATION.md  Inference.py  README.md  README_SR.md  RUN_LAB.md  THESIS_IMPLEMENTATION.md  all_models_summary.json  check_results.py  commit_thesis.sh  create_plots.py  custom_train.sh  examples_data_withnonnullvalue.py  infer_alexnet_caps.py.save  init_db.py  lemur_archival_pipeline.py  mobile_test.py  model_analysis.py  plot_chart.py  plot_gan.py  pyproject.toml  requirements.txt  run_layer_analysis.sh  simple_accuracy_stat_viz.py  statistics.ipynb  test.py  test_sql_query_paths.py  test_utkface.py  train_age_estimation.py  train_all_sr.sh  train_final.py  visualize_github_training.py  yashcv1234  yashcv1234.pub
DEMO/: DCVAE.py  app.py  index.html
MOHSIN_THESIS_FINAL/code/: rlfn.py
_work/stats/: all_models_accuracy_dynamic.json  all_models_accuracy_fp16.json  all_models_accuracy_mixed.json  upload_failed.json  upload_history_age_artifacts.json  upload_history_dynamic.json  upload_history_fp16.json  upload_history_mixed.json
ab/nn/: api.py  run.py  save_results.py  train.py
cmd/: README.md
cmd/py/: add_prm.py  auto_hagging_face_checkpoints.py  calc_stats.py  checkpoints_to_hugging_face.py  uid_gen.py
demo/: README_HSRv4.md  ResNetTransformer_inference.py  Text-Image-GAN.py  Text-ImageCVAE.py  Text-ImageUnet.html  Text-ImageUnet.py  app.py  check_dataset_size.py  convert_final_v5.py  generate_captions_csv.py  godzilla_convert_to_tflite.py  godzilla_eval_pipeline.py  godzilla_restore_demo.py  img-caption-single.py  index.html  infer_alexnet_caps.py  inference_ResNetTransformer2.py  requirements.txt  test_imdb_wiki.py
demo/util/: save_results.py
doc/: VISUALIZATION_GUIDE.md
k8s/: checkpoints-imagenet100-one.json  checkpoints-imagenet100-test.json  pull-repo.json  submit-imagenet100-checkpoints.sh  train-age.json  train-final.json
results/img-classification_cifar-100_acc_rag-00b59653488b5c497a057dcabac390e3/: 1.json  10.json  2.json  20.json  5.json  50.json
results/img-classification_cifar-100_acc_rag-0109387a56b9ea27ceecbef0693c03c0/: 1.json  15.json  2.json  3.json  30.json  35.json  4.json  5.json  50.json
results/img-classification_cifar-100_acc_rag-025a5985b401fad9e946c5655d65691d/: 10.json  5.json
results/img-classification_cifar-100_acc_rag-02ee02a6133bde2de43ec9da3282f981/: 10.json  3.json  40.json  50.json
results/img-classification_cifar-100_acc_rag-031c64e7fe489a3307f3bded1397b6ad/: 10.json  25.json  5.json
scripts/: upload_age_artifacts_to_hf.py
similarity-curriculum-selector/: README.md  check_sim.py  compute_similarity.py  debug_sim_extraction.py  model_selector.py
(+397450 files in other folders)
