[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'nn-dataset'
dynamic = ['version', 'dependencies']
description = 'Neural Network Dataset'

long-description = """
LEMUR NN Dataset provides a structured interface and curated archive for neural-network experiments, including model performance, hyperparameters, and source architectures.  
The package enables retrieval of historical experiment data via `data()`, submission of new neural network configurations for validation, and integration with LLM agents, AutoML systems, or benchmarking pipelines.

Key features include:
- Access to validated experiment metadata, including model code, hyperparameters, metrics, and execution details.
- Support for automated validation of new architectures, facilitating reproducible research and comparative evaluation.
- Compatibility with containerized environments (e.g., Docker or AI-Linux) to ensure consistent and reproducible training workflows.

The project aims to support research and development workflows where traceability, reproducibility, and systematic comparison of neural-network models are required.
"""

long-description-content-type = 'text/markdown'
readme = { file = 'README.md', content-type = 'text/markdown' }
license = { file = 'LICENSE' }
requires-python = '>=3.10'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Data Processing',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
]

keywords = ['neural network', 'dataset', 'experiment archive', 'hyperparameters', 'autoML', 'LLM integration', 'model validation', 'benchmarking', 'python library', 'AI research']
authors = [{ name = 'ABrain One and contributors', email = 'AI@ABrain.one' }]

[project.urls]
Homepage = 'https://ABrain.one'
Repository = 'https://github.com/ABrain-One/nn-dataset'
'Bug Tracker' = 'https://github.com/ABrain-One/nn-dataset/issues'

[tool.setuptools.dynamic]
version = { file = 'version' }
dependencies = { file = 'requirements.txt' }

[tool.setuptools.packages.find]
where = ['']

[tool.setuptools]
include-package-data = true

[tool.setuptools.data-files]
'*' = ['**/*.json']

[tool.setuptools.package-data]
'ab' = ['*.md']
'Doc' = ['Licenses/*']
'*' = ['requirements.txt', 'README.md', 'LICENSE', 'version']

[project.optional-dependencies]
stat = ['nn-stat']
